--- a/frontend/src/admin.css
+++ b/frontend/src/admin.css
@@ -1,6 +1,6 @@
 .admin-container {
   padding: 40px 80px;
-  background-color: #f9f9f9;
+  background-color: #ffffff;
   height: calc(100vh - 200px);
   display: flex;
   flex-direction: column;
